2005/03/24	kaffeetisch

	* GType.xs, GValue.xs, gperl.h: Add API that allows binding
	developers to specify conversion functions when registering
	fundamental types that are to be used by gperl_value_from_sv() and
	gperl_sv_from_value().  gperl_register_fundamental_full() is the
	new function that takes a GPerlValueWrapperClass struct which
	contains a GPerlValueWrapFunc and a GPerlValueUnwrapFunc.
	gperl_fundamental_wrapper_class_from_type() can be used to
	retrieve the GPerlValueWrapperClass that corresponds to a given
	GType.

	* GBoxed.xs, GType.xs: Document that gperl_register_boxed() and
	gperl_register_fundamental_full() assume that the wrapper class is
	statically allocated and that it will always be alive.

2005/03/07	kaffeetisch

	* Glib.pm, Makefile.PL, META.yml, NEWS, README: Stable release
	1.080.

2005/03/06	kaffeetisch

	* GBoxed.xs: Fix a typo.

2005/02/28	kaffeetisch

	* Glib.pm, META.yml, Makefile.PL, NEWS, README: Unstable release
	1.074.

2005/02/15 15:48 (-0500) rwmcfa1

	* GMainLoop.xs: likely type-o on Glib::MainLoop->new causing ref count
	to start out at 2 and thus main loops never die, should of been unref.

2005/02/07 23:40 (-0500) muppetman

	* Glib.pm, NEWS, README: Unstable release 1.073

2005/02/07 23:30 (-0500) muppetman

	* t/9.t: Disable the async signal test on win32.

2005/02/07 23:20 (-0500) muppetman

	* GSignal.xs, gperl.h, Glib.exports: Bind and document g_signal_query
	as Glib::Object::signal_query.  Add newSVGSignalQuery to marshal a
	GSignalQuery to perl.

	* GType.xs: Move guts of list_signals to newSVGSignalQuery, and call
	that function instead.

	M MANIFEST
	A t/signal_query.t: New test for signal_query and list_signals.

2005/02/07 23:20 (-0500) muppetman

	* GLog.xs: Call abort() rather than croak() on G_LOG_LEVEL_ERROR
	messages.  croak()ing didn't do anything useful, and abort()ing
	allows you to stop gdb on an error and get a backtrace.

2005/02/04 22:36 (-0500) muppetman
